fix: add nowrap for long text in the box

--- a/src/App.css
+++ b/src/App.css
@@ -126,8 +126,8 @@ h1 {
 }
 
 .todo__text {
-  display: ruby;
   width: 70%;
+  white-space: nowrap;
   font-size: 14px;
   padding: 30px 20px 15px 25px;
   text-align: left;
@@ -203,7 +203,6 @@ h1 {
   text-transform: uppercase;
   font-weight: 600;
   margin: 3px;
-  margin-right: 15px;
   margin-bottom: 15px;
   position: relative;
   color: var(--main-color);
